--- a/html/list.html
+++ b/html/list.html
@@ -1,26 +1,27 @@
+<html><head>
+<title>Your Videos On GoAnimate</title>
+</head>
 <body>
 	<header>
 		<div>
 			<div>
-				<a href="./"><img src="logo.png" /></a>
-				<span>VERSIÖN</span>
+				<a class="site-logo" href="home.html" title="GoAnimate">
+                                <img src="logo.png" /></a>
 			</div>
 			<div>
 				<a class="button_small" onclick="document.getElementById('file').click()">UPLOAD A MOVIE</a>
 				<div class="char_dropdown button_small">
 					<div>CREATE A CHARACTER</div>
 					<menu>
-						<a href="/cc?themeId=family&bs=adam">Adam</a>
+                                                <a href="/cc?themeId=family&bs=adam">Adam</a>
 						<a href="/cc?themeId=family&bs=eve">Eve</a>
 						<a href="/cc?themeId=family&bs=bob">Bob</a>
 						<a href="/cc?themeId=family&bs=rocky">Rocky</a>
 						<div></div>
-						<!--
 						<a href="/cc?themeId=business&bs=default">Business</a>
 						<a href="/cc?themeId=business&bs=heavy">Heavy</a>
 						<a href="/cc?themeId=business&bs=kid">Kid</a>
 						<div></div>
-						-->
 						<a href="/cc?themeId=whiteboard&bs=default">Whiteboard</a>
 						<a href="/cc?themeId=whiteboard&bs=kid">Whiteboard (Kid)</a>
 						<div></div>
@@ -30,22 +31,26 @@
 						<a href="/cc?themeId=ninjaanime&bs=guy">Guy (Ninja Anime)</a>
 						<a href="/cc?themeId=ninjaanime&bs=girl">Girl (Ninja Anime)</a>
 						<div></div>
-						<a href="/cc?themeId=cc2&bs=default">Lil Peepz</a>
+						<a href="/cc?themeId=cc2&bs=default">Lil' Peepz</a>
 						<div></div>
 						<a href="/cc?themeId=chibi&bs=default">Chibi Peepz</a>
 						<div></div>
 						<a href="/cc?themeId=ninja&bs=default">Chibi Ninjas</a>
-						<div></div>
-
+				</menu>
+				</div>
+				<div class="char_dropdown button_small">
+					<div>BROWSE CHARACTERS</div>
+					<menu>
+						<a href="/cc_browser?themeId=family">Comedy World</a>
+						<a href="/cc_browser?themeId=anime">Anime</a>
+						<a href="/cc_browser?themeId=ninjaanime">Ninja Anime</a>
+						<a href="/cc_browser?themeId=cc2">Lil' Peepz</a>
+						<a href="/cc_browser?themeId=chibi">Chibi Peepz</a>
+						<a href="/cc_browser?themeId=ninja">Chibi Ninjas</a>					
 					</menu>
 				</div>
-				<a href="/go_full" class="button_big">MAKE A VIDEO</a>
+				<a href="/html/videomaker.html" class="button_big">MAKE A VIDEO</a>
 			</div>
-		</div>
-		<div class="warning">One dozen four hours on importing and I've somewhat got it to work.<br>
-			Be advised that as new functionalities are being implemented,
-			software-breaking bugs will ensue.<br><a href='https://github.com/josephcrosmanplays532/GoAnimate-Wrapper-2.0'>Link
-				to the source code on GitHub</a>
 		</div>
 	</header>
 	<table>
@@ -65,13 +70,9 @@
 		</tfoot>
 	</table>
 	<form enctype='multipart/form-data' action='/upload_movie' method='post'>
-		<input id='file' type="file" onchange="this.form.submit()" name='import' />
+		<input id='file' type="file" onchange="this.form.submit()" name='import' accept=".xml" />
 	</form>
 	<script>
-		const closeReq = new XMLHttpRequest();
-		closeReq.open('GET', '/events/close');
-		closeReq.send();
-
 		var json;
 		var tbody = document.getElementsByTagName('tbody')[0];
 		var loadMore = document.getElementById('load_more');
@@ -91,7 +92,7 @@
 				const tbl = json[c];
 				const date = tbl.date.substr(0, 10) + ' ' + tbl.date.substr(11);
 				tbody.insertAdjacentHTML('beforeend',
-					'<tr><td><img src="/movie_thumbs/' + tbl.id + '"></td><td><div>' + tbl.title.replace(/&/g, "&amp;").replace(/</g, "&lt;").replace(/>/g, "&gt;") + '</div><div>' + tbl.durationString + '</div></div></td><td><span>' + date + '</span></td><td><a href="javascript:;" onclick="popup(\'' + tbl.id + '\')"></a><a href="/go_full?movieId=' + tbl.id + '"></a><a href="/movies/' + tbl.id + '.xml" download="' + tbl.title + '"></a></td></tr>');
+					'<tr><td><img src="/movie_thumbs/' + tbl.id + '.png"></td><td><div>' + tbl.title.replace(/&/g, "&amp;").replace(/</g, "&lt;").replace(/>/g, "&gt;") + '</div><div>' + tbl.durationString + '</div></div></td><td><span>' + date + '</span></td><td><a href="javascript:;" onclick="popup(\'' + tbl.id + '\')"></a><a href="/go_full?movieId=' + tbl.id + '"></a><a href="/movies/' + tbl.id + '.xml" download="' + tbl.title + '"></a></td></tr>');
 			}
 		}
 
@@ -103,7 +104,7 @@
 		}
 
 		function popup(id) {
-			window.open('/player?movieId=' + id, 'MsgWindow', 'width=1280,height=720,left=' + (screen.width / 2 - 640) + ',top=' + (screen.height / 2 - 360));
+			window.open('/player?movieId=' + id, 'MsgWindow', 'width=1280,height=723,left=' + (screen.width / 2 - 640) + ',top=' + (screen.height / 2 - 360));
 		}
 	</script>
 	<style>
@@ -124,18 +125,18 @@
 		}
 
 		header {
-			position: fixed;
+			position: sticky;
 			top: 0;
 			width: 100%;
 		}
 
 		header>:nth-child(1) {
-			height: 44px;
 			align-content: center;
 			background-color: #1e1e1e;
-			color: #fff;
-			text-align: center;
 			display: inline-block;
+			padding-bottom: 13px;
+			text-align: center;
+			color: #fff;
 			width: 100%;
 		}
 
@@ -157,12 +158,12 @@
 
 		header>:nth-child(1)>:nth-child(2) {
 			margin-right: 20px;
-			float: right;
+			clear: both;
 		}
 
 		.button_big,
 		.button_small {
-			margin-left: 10px;
+			margin-left: 20px;
 			margin-top: 7px;
 			display: inline-block;
 			padding-top: 5px;
@@ -191,10 +192,6 @@
 			cursor: pointer;
 		}
 
-		.char_dropdown {
-			width: 200px;
-		}
-
 		.char_dropdown:hover>:nth-child(1) {
 			cursor: context-menu;
 			color: #d85e27;
@@ -207,7 +204,7 @@
 			left: 0;
 			z-index: 1000;
 			float: left;
-			width: 190px;
+			width: 100%;
 			padding: 10px 0;
 			margin: 9px 0 0;
 			list-style: none;
@@ -271,7 +268,7 @@
 			margin-bottom: 127px;
 			margin-right: auto;
 			margin-left: auto;
-			margin-top: 127px;
+			margin-top: 70px;
 			background-color: transparent;
 			border-collapse: collapse;
 			border-spacing: 0;
@@ -282,17 +279,41 @@
 			table {
 				width: 750px;
 			}
+
+			tr>:nth-child(2)>* {
+				width: 350px;
+			}
 		}
 
 		@media(min-width: 992px) {
 			table {
 				width: 970px;
 			}
+
+			tr>:nth-child(2)>* {
+				width: 580px;
+			}
+		}
+
+		@media (min-width: 1030px) {
+			header>:nth-child(1) {
+				padding-bottom: 0;
+				height: 44px;
+			}
+
+			header>:nth-child(1)>:nth-child(2) {
+				clear: none;
+				float: right;
+			}
 		}
 
 		@media(min-width: 1200px) {
 			table {
 				width: 1170px;
+			}
+
+			tr>:nth-child(2)>* {
+				width: 780px;
 			}
 		}
 
@@ -336,12 +357,17 @@
 			color: #999;
 		}
 
+		tr>:nth-child(2)>:nth-child(1) {
+			overflow: hidden;
+			text-overflow: ellipsis;
+		}
+
 		tr>:nth-child(2)>:nth-child(2) {
 			font-family: monospace;
 		}
 
 		tr>:nth-child(3) {
-			width: 250px;
+			width: 200px;
 		}
 
 		tr>:nth-child(3)>* {
